manifests/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: practical
  name: practical
spec:
  type: NodePort
  ports:
    - port: 3000
      protocol: TCP
      targetPort: 3000
  selector:
    app: practical
