manifests/app-ingress.yaml
apiVersion:  extensions/v1beta1 
kind: Ingress
metadata:
  name: practical-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
   - http:
      paths:
      - path: /practical
        backend:
          serviceName: practical
          servicePort: 3000
